--- a/Hospitales.html
+++ b/Hospitales.html
@@ -37,18 +37,52 @@
                 <p class="ocultar">&nbspVacunas</p>
             </a>
         </nav>
-        <section class="center-on-small-only consejos">
+        <section class="center-on-small-only consejos" style="margin-bottom: 100px;">
             <div>
                 <ul class="collapsible popout">
                     <li>
                         <div class="collapsible-header grey lighten-3 border">
                             <i class="material-icons">announcement</i>
-                            <h6>IMSS No. 7 / TEPEYAC</h6>
+                            <h6>Hospital IMSS No. 7 / TEPEYAC</h6>
                         </div>
-                        <div class="collapsible-body indigo lighten-5 border">
-                            <p class="center-align">
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia vero illo consequuntur sed quasi atque repellendus accusantium non id. Saepe exercitationem nemo sunt labore consequatur et libero facilis minus enim.
-                            </p>
+                        <div class="collapsible-body indigo lighten-5 border center-align">
+                            <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
+                            <hr>
+                            <h6 class="negritas">Nivel de atención:</h6>
+                            <p class="text-mediana">Atención nivel 2 (Sintomas graves).</p>
+                            <h6 class="negritas">Hospital:</h6>
+                            <h6 class="negritas">Dirección:</h6>
+                            <h6 class="negritas">Numero de atención:</h6>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header blue darken-2 white-text border">
+                            <i class="material-icons">announcement</i>
+                            <h6>Clinica IMSS / CENTRO / Hernando de Martell</h6>
+                        </div>
+                        <div class="collapsible-body indigo lighten-5 border center-align">
+                            <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
+                            <hr>
+                            <h6 class="negritas">Nivel de atención:</h6>
+                            <p class="text-mediana">Atención nivel 1 (Sintomas leves).</p>
+                            <h6 class="negritas">Hospital:</h6>
+                            <h6 class="negritas">Dirección:</h6>
+                            <h6 class="negritas">Numero de atención:</h6>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header grey lighten-3 border">
+                            <i class="material-icons">announcement</i>
+                            <h6>Hospital General / Cristeros</h6>
+                        </div>
+                        <div class="collapsible-body indigo lighten-5 border center-align">
+                            <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
+                            <hr>
+                            <h6 class="negritas">Nivel de atención:</h6>
+                            <p class="text-mediana">Atención nivel 2 (Sintomas graves).</p>
+                            <h6 class="negritas">Hospital:</h6>
+                            <h6 class="negritas">Dirección:</h6>
+                            <h6 class="negritas">Numero de atención:</h6>
                         </div>
                     </li>
                 </ul>
