--- a/Consejos.html
+++ b/Consejos.html
@@ -45,15 +45,17 @@
                             <i class="material-icons">announcement</i>
                             <h6>Lavado correcto de manos</h6>
                         </div>
-                        <div class="collapsible-body indigo lighten-5 border">
-                            <p class="center-align">Para eliminar cualquier rastro del virus de las manos, no basta con frotar y aclarar rápidamente. Este es el proceso para lavarse las manos de manera eficaz, paso a paso.</p>
+                        <div class="collapsible-body indigo lighten-5 center-align border text-grande">
+                            <h5 class="negritas center-align">Lavado correcto de manos</h5>
+                            <img class="responsive-img imagen border-green" src="./Recursos/LavadoManos.jpeg">
+                            <p class="text-justify">Para eliminar cualquier rastro del virus de las manos, no basta con frotar y aclarar rápidamente. Este es el proceso para lavarse las manos de manera eficaz, paso a paso.</p>
                             <hr>
                             <p>
-                                Paso 1: Mojarse las manos con agua corriente. <br>
-                                Paso 2: Aplicar una cantidad suficiente de jabón para cubrir las manos mojadas. <br>
-                                Paso 3: Frotar por toda la superficie de las manos (el dorso, el espacio entre los dedos y debajo de las uñas) durante, al menos, 20 segundos. <br>
-                                Paso 4: Aclarar bien con agua corriente. <br>
-                                Paso 5: Secarse las manos con un paño limpio o una toalla de un solo uso. <br>
+                                <span class="negritas green-text">Paso 1:</span> Mojarse las manos con agua corriente. <br>
+                                <span class="negritas green-text">Paso 2:</span> Aplicar una cantidad suficiente de jabón para cubrir las manos mojadas. <br>
+                                <span class="negritas green-text">Paso 3:</span> Frotar por toda la superficie de las manos (el dorso, el espacio entre los dedos y debajo de las uñas) durante, al menos, 20 segundos. <br>
+                                <span class="negritas green-text">Paso 4:</span> Aclarar bien con agua corriente. <br>
+                                <span class="negritas green-text">Paso 5:</span> Secarse las manos con un paño limpio o una toalla de un solo uso. <br>
                             </p>
                             <hr>
                             <p class="center-align">
@@ -70,8 +72,11 @@
                             <i class="material-icons">announcement</i>
                             <h6>Uso correcto del cubrebocas</h6>
                         </div>
-                        <div class="collapsible-body white border">
-                            <p>
+                        <div class="collapsible-body indigo lighten-5 border text-grande center-align">
+                            <h5 class="negritas center-align">Uso correcto del cubrebocas</h5>
+                            <img class="responsive-img imagen border-green" src="./Recursos/UsoCubrebocas.png">
+                            <hr>
+                            <p class="text-justify">
                                 •	Al colocarlo, es muy importante que tus manos no toquen la parte interna. <br>
                                 •	Ajústalo a tu cara, cuida de cubrir completamente tu boca y nariz. <br>
                                 •	Mientras lo traigas puesto no lo toques. Si por cualquier razón lo haces, lávate las manos o límpialas con un gel a base de alcohol. <br>
@@ -79,6 +84,7 @@
                                 •	Aun cuando utilices el cubrebocas, debes estornudar y toser en el ángulo interno del codo o con un pañuelo. <br>
                                 •	Su utilización no debe extenderse más de un día. <br>
                             </p>
+                            <hr>
                             <div class="botones">
                                 <a href="http://covid19.saludsonora.gob.mx/?page_id=288" class="btn-contenedor">Saber Mas...</a>
                                 <a href="" class="btn-contenedor">Compartir</a>
@@ -90,17 +96,10 @@
                             <i class="material-icons">announcement</i>
                             <h6>Aplicación correcta del gel antibacterial</h6>
                         </div>
-                        <div class="collapsible-body white border">
-                            <p>
-                                •	Desposita suficiente gel antibacterial en la palma de las manos como para recubrirla. <br>
-                                •	Frota las manos entre si con movimientos circulares. <br>
-                                •	Frota la palma derecha contra la izquierda entrelazando los dedos y viceversa. <br>
-                                •	Frota las manos entre si entrelazando los dedos. <br>
-                                •	Frota con un movimiento de rotación el pulgar izquierdo atrapándolo con la palma derecha y viceversa. <br>
-                                •	Frota la punta de tus dedos de la mano derecha contra la palma de la mano izquierda en movimientos de rotación y viceversa. <br>
-                                •	Una vez secas, tus manos son seguras. <br>
-
-                            </p>
+                        <div class="collapsible-body indigo lighten-5 border center-align">
+                            <hr>
+                            <img class="responsive-img imagen border-red" src="./Recursos/GelAntibacterial.jpg">
+                            <hr>
                             <div class="botones">
                                 <a href="https://www.farmaciasanpablo.com.mx/mi-consultorio/blog/gel-antibacterial" class="btn-contenedor">Saber Mas...</a>
                                 <a href="" class="btn-contenedor">Compartir</a>
@@ -112,9 +111,10 @@
                             <i class="material-icons">announcement</i>
                             <h6>¿Como puedo guardar una sana distancia?</h6>
                         </div>
-                        <div class="collapsible-body white border">
+                        <div class="collapsible-body indigo lighten-5 border text-grande center-align">
+                            <img class="responsive-img imagen border-green" src="./Recursos/SanaDistanciax.jpg">
                             <p>
-                                Para seguir correctamente la sana distancia debemos mantener 1.5 metros o entre dos a tres brazos de distancia entre persona y persona, evitar los lugares concurridos y tratar de siempre cumplir con los dos a tres brazos de distancia para así poder evitar el contagio o mayor propagación del virus.
+                                Para seguir correctamente la <span class="negritas">sana distancia</span> debemos mantener <span class="negritas green-text">1.5 metros</span> o entre dos a tres brazos de distancia entre persona y persona, evitar los lugares concurridos y tratar de siempre cumplir con los dos a tres brazos de distancia para así poder evitar el contagio o mayor propagación del virus.
                             </p>
                             <div class="botones">
                                 <a href="https://www.gob.mx/salud/documentos/sana-distancia" class="btn-contenedor">Saber Mas...</a>
@@ -127,18 +127,47 @@
                             <i class="material-icons">announcement</i>
                             <h6>¿Que debo de hacer al llegar a casa?</h6>
                         </div>
-                        <div class="collapsible-body white border">
-                            <p>
-                                •	Intenta no tocar nada <br>
-                                •	Quítate los zapatos, límpialos y ponte otros (pantuflas o sandalias). <br>
-                                •	Desinfecta las patitas de tu mascota si la sacaste a pasear. <br>
-                                •	Quítate la ropa exterior y métela en una bolsa para lavar. <br>
-                                •	Deja el bolso, cartera, etc. en una caja en la entrada. <br>
-                                •	Báñate y si no puedes, lava todas las zonas expuestas. <br>
-                                •	Limpia el celular, lentes, etc. <br>
-                                •	Desinfecta las superficies de las cosas que hayas traído contigo. <br>
-                                •	Recuerda que no puedes hacer una desinfección total, se trata de disminuir el riesgo. <br>
-                            </p>
+                        <div class="collapsible-body indigo lighten-5 border text-grande center-align">
+                            <h5>¿Que debo de hacer al llegar a casa?</h5> <br> <br>
+                            <div class="row brown lighten-4 padding border negritas">
+                                <div class="col m6 s12">                                     
+                                    <img class="responsive-img imagen border-red" src="./Recursos/NoTocar.png">
+                                    <p>Intenta no tocar nada</p>                    
+                                </div>
+                                <div class="col m6 s12">                                    
+                                    <img class="responsive-img imagen border-green" src="./Recursos/QuitarseZapatos.jpg">
+                                    <p>Quítate los zapatos, límpialos y ponte otros (pantuflas o sandalias)</p>                                   
+                                </div>
+                                <div class="col s12"><hr></div>
+                                <div class="col m6 s12">                                    
+                                    <img class="responsive-img imagen border-orange" src="./Recursos/Desinfectar.jpg"> 
+                                    <p>Desinfecta las patitas de tu mascota si la sacaste a pasear</p>                                   
+                                </div>
+                                <div class="col m6 s12">                                    
+                                    <img class="responsive-img imagen border-purple" src="./Recursos/QuitarseRopa.jpg">
+                                    <p>Quítate la ropa exterior y métela en una bolsa para lavar</p>                     
+                                </div>
+                                <div class="col s12"><hr></div>
+                                <div class="col m6 s12">                                    
+                                    <img class="responsive-img imagen border-violet" src="./Recursos/Objetos.jpg">
+                                    <p>Deja el bolso, cartera, etc. en una caja en la entrada</p>                     
+                                </div>
+                                <div class="col m6 s12">
+                                    <img class="responsive-img imagen border-yellow" src="./Recursos/Ducharse.jpg">
+                                    <p>Báñate y si no puedes, lava todas las zonas expuestas</p>
+                                </div>
+                                <div class="col s12"><hr></div>
+                                <div class="col m6 s12">                                    
+                                    <img class="responsive-img imagen border-grey" src="./Recursos/LimpiarCelular.jpg">
+                                    <p>Limpia el celular, lentes, etc</p>                     
+                                </div>
+                                <div class="col m6 s12">                            
+                                    <img class="responsive-img imagen border-green" src="./Recursos/LimpiarObjetos.jpg">
+                                    <p>Desinfecta las superficies de las cosas que hayas traído contigo</p>
+                                </div>                                
+                            </div>
+                            <hr>
+                            <p class="negritas">Recuerda que no puedes hacer una desinfección total, se trata de disminuir el riesgo</p>
                             <div class="botones">
                                 <a href="https://hgm.salud.gob.mx/descargas/pdf/noticias/Protocolos_Salud_COVID-19.pdf" class="btn-contenedor">Saber Mas...</a>
                                 <a href="" class="btn-contenedor">Compartir</a>
@@ -150,14 +179,16 @@
                             <i class="material-icons">announcement</i>
                             <h6>Conoce los sintomas</h6>
                         </div>
-                        <div class="collapsible-body white border">
+                        <div class="collapsible-body indigo lighten-5 border text-grande">
+                            <h5 class="negritas center-align">¡Conoce los síntomas!</h5>
+                            <img class="responsive-img imagen center-block border-red" src="./Recursos/Sintomas.jpg">
                             <p>
-                                Los síntomas más comunes de la COVID-19 son: <br> <br>
+                                <span class="negritas">Los síntomas más comunes de la COVID-19 son:</span> <br> <br>
                                 •	Fiebre <br>
                                 •	tos seca <br>
                                 •	Cansancio. <br>
                                 <hr>
-                                Otros síntomas menos frecuentes que pueden afectar a algunos pacientes son: <br> <br>                               
+                                <span class="negritas">Otros síntomas menos frecuentes que pueden afectar a algunos pacientes son:</span> <br> <br>                               
                                 •	Pérdida del gusto o el olfato. <br>
                                 •	Dolores. <br>
                                 •	Dolor de cabeza. <br>
@@ -166,7 +197,7 @@
                                 •	Ojos enrojecidos. <br>
                                 •	Diarrea o erupción cutánea. <br>
                                 <hr>
-                                Los síntomas graves son los siguientes: <br> <br>
+                                <span class="negritas">Los síntomas graves son los siguientes:</span> <br> <br>
                                 •	Dificultad para respirar o sensación de falta de aire. <br>
                                 •	Dolor o presión en el pecho. <br>
                                 •	Incapacidad para hablar o moverse. <br>
@@ -184,9 +215,11 @@
                             <i class="material-icons">announcement</i>
                             <h6>¿Los mosquitos pueden transmitir el virus COVID-19 a través de su picadura?</h6>
                         </div>
-                        <div class="collapsible-body white border">
+                        <div class="collapsible-body indigo lighten-5 border text-grande">
+                            <h5 class="negritas center-align">¿Los mosquitos pueden transmitir el virus COVID-19 a través de su picadura?</h5>
+                            <img class="responsive-img imagen center-block border-green" src="./Recursos/Mosquito.jpg">
                             <p>
-                                NO. Es un virus respiratorio que se propaga principalmente por gotitas de saliva expulsadas por una persona infectada al toser o estornudar. No existe evidencia que el nuevo coronavirus, pueda transmitirse por mosquitos.
+                                <span class="red-text negritas">NO</span>. Es un virus respiratorio que se propaga principalmente por gotitas de saliva expulsadas por una persona infectada al toser o estornudar. No existe evidencia que el nuevo coronavirus, pueda transmitirse por mosquitos.
                             </p>
                             <div class="botones">
                                 <a href="https://coronavirus.gob.mx/mitos-y-realidades/" class="btn-contenedor">Saber Mas...</a>
@@ -199,9 +232,11 @@
                             <i class="material-icons">announcement</i>
                             <h6>¿Se puede reutilizar un cubrebocas?</h6>
                         </div>
-                        <div class="collapsible-body white border">
-                            <p>
-                                NO. Los cubrebocas, incluidos los N95, no deben reutilizarse, ya que se contaminan al ser utilizados por alguien con síntomas de infección respiratoria o en contacto con personas infectadas.
+                        <div class="collapsible-body indigo lighten-5 border text-grande">
+                            <h5 class="negritas center-align">¿Se puede reutilizar un cubrebocas?</h5>
+                            <img class="responsive-img imagen center-block border-green" src="./Recursos/Cubrebocas.jpg">
+                            <p class="center-align">
+                                <span class="red-text negritas">NO</span>. Los cubrebocas, incluidos los N95, no deben reutilizarse, ya que se contaminan al ser utilizados por alguien con síntomas de infección respiratoria o en contacto con personas infectadas.
                             </p>
                             <div class="botones">
                                 <a href="https://coronavirus.gob.mx/mitos-y-realidades/" class="btn-contenedor">Saber Mas...</a>
@@ -214,9 +249,11 @@
                             <i class="material-icons">announcement</i>
                             <h6>¿Se puede acabar con el virus rociando alcohol o cloro en el cuerpo?</h6>
                         </div>
-                        <div class="collapsible-body white border">
-                            <p>
-                                NO. Rociar todo el cuerpo con alcohol o cloro, no sirve para matar los virus que ya han entrado en el organismo, estas sustancias pueden dañar los ojos, la boca, etc.
+                        <div class="collapsible-body indigo lighten-5 border text-grande">
+                            <h5 class="negritas center-align">¿Se puede acabar con el virus rociando alcohol o cloro en el cuerpo?</h5>
+                            <img class="responsive-img imagen center-block border-green" src="./Recursos/Cloro.jpg">
+                            <p class="center-align">
+                                <span class="red-text negritas">NO</span>. Rociar todo el cuerpo con alcohol o cloro, no sirve para matar los virus que ya han entrado en el organismo, estas sustancias pueden dañar los ojos, la boca, etc.
                             </p>
                             <div class="botones">
                                 <a href="https://coronavirus.gob.mx/mitos-y-realidades/" class="btn-contenedor">Saber Mas...</a>
