--- a/Consejos.html
+++ b/Consejos.html
@@ -128,7 +128,8 @@
                             <h6>¿Que debo de hacer al llegar a casa?</h6>
                         </div>
                         <div class="collapsible-body indigo lighten-5 border text-grande center-align">
-                            <h5>¿Que debo de hacer al llegar a casa?</h5> <br> <br>
+                            <h5 class="negritas">¿Que debo de hacer al llegar a casa?</h5> <br>
+                            <hr>
                             <div class="row brown lighten-4 padding border negritas">
                                 <div class="col m6 s12">                                     
                                     <img class="responsive-img imagen border-red" src="./Recursos/NoTocar.png">
@@ -213,10 +214,10 @@
                     <li>
                         <div class="collapsible-header grey lighten-3 border">
                             <i class="material-icons">announcement</i>
-                            <h6>¿Los mosquitos pueden transmitir el virus COVID-19 a través de su picadura?</h6>
+                            <h6>¿Los mosquitos pueden transmitir el virus SARS-CoV-2 a través de su picadura?</h6>
                         </div>
                         <div class="collapsible-body indigo lighten-5 border text-grande">
-                            <h5 class="negritas center-align">¿Los mosquitos pueden transmitir el virus COVID-19 a través de su picadura?</h5>
+                            <h5 class="negritas center-align">¿Los mosquitos pueden transmitir el virus SARS-CoV-2 a través de su picadura?</h5>
                             <img class="responsive-img imagen center-block border-green" src="./Recursos/Mosquito.jpg">
                             <p>
                                 <span class="red-text negritas">NO</span>. Es un virus respiratorio que se propaga principalmente por gotitas de saliva expulsadas por una persona infectada al toser o estornudar. No existe evidencia que el nuevo coronavirus, pueda transmitirse por mosquitos.
