--- a/Hospitales.html
+++ b/Hospitales.html
@@ -43,7 +43,7 @@
                     <li>
                         <div class="collapsible-header grey lighten-3 border">
                             <i class="material-icons">announcement</i>
-                            <h6>Hospital IMSS No. 7 / TEPEYAC</h6>
+                            <h6>H.G.Z. 7, (Hospital General de Zona / TEPEYAC </h6>
                         </div>
                         <div class="collapsible-body indigo lighten-5 border center-align">
                             <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
@@ -58,7 +58,7 @@
                     <li>
                         <div class="collapsible-header blue darken-2 white-text border">
                             <i class="material-icons">announcement</i>
-                            <h6>Clinica IMSS / CENTRO / Hernando de Martell</h6>
+                            <h6>UMF 177, (Unidad Medico Familiar)</h6>
                         </div>
                         <div class="collapsible-body indigo lighten-5 border center-align">
                             <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
