--- a/Hospitales.html
+++ b/Hospitales.html
@@ -43,7 +43,7 @@
                     <li>
                         <div class="collapsible-header grey lighten-3 border">
                             <i class="material-icons">announcement</i>
-                            <h6>HOSPITAL REGIONAL DE ZONA No. 7 / H.G.Z. No 7 / TEPEYAC </h6>
+                            <h6>HOSPITAL REGIONAL DE ZONA No. 7 / H.G.Z. No 7 / EL TEPEYAC </h6>
                         </div>
                         <div class="collapsible-body indigo lighten-5 border center-align">
                             <img class="responsive-img imagen border-grey" src="./Recursos/MapaPrueba.jpg">
