--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
         <header class="encabezado brown darken-4">
             <div class="nav-wrapper">
-                <a href="Inicio.html" class="brand-logo left"><img src="Recursos/LogoYellow.png"></a>
+                <a href="Inicio.html" class="brand-logo left"><img src="Recursos/LogoGreen.png"></a>
                 <h4 class="brand-logo center">Inicio — Casos COVID-19</h4>
             </div>            
         </header>
